# NeuralNetcpp

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/Neural_Net/: CMakeLists.txt  Neural_Net.cpp
src/Optimizer/: CMakeLists.txt  Optimizer.h
src/Print_Utils/: CMakeLists.txt
src/Utils/: CMakeLists.txt
tests/: CMakeLists.txt  Unit_Tests.cpp
